# ibis-color

./: CMakeLists.txt  README.md
include/ibis/color/: attribute.hpp  decorator.hpp  facet.hpp  manip.hpp  message.hpp
include/ibis/color/detail/: ansi_esc_printer.hpp  ansi_writer.hpp  attribute_container.hpp  color.hpp  platform.hpp  platform_unix.hpp  platform_windows.hpp  winapi_printer.hpp  winapi_writer.hpp
src/: color.cpp  color_platform_windows.cpp
